# polyglot

./: README.md  pyproject.toml
.github/workflows/: python.yml
polyglot/: __init__.py  cli.py
tests/: test.poly  test_polyglot.py
tests/test_polyglot/: communicate.poly  fail.poly  success.poly
