[tool.poetry]
name = "polyglot"
version = "0.1.0"
description = ""
authors = ["David Buckley <david@davidbuckley.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
polyglot = 'polyglot:cli.app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
